<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_div"
    android:background="@color/colorBG"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBG"
        android:orientation="vertical">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@color/colorBlack"
            android:layout_height="65dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:id="@+id/login_title"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal|center_vertical" />



        </RelativeLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBG">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorEditTextBG"
                        android:layout_alignParentBottom="true"
                        />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginTop="55dp"
                    android:gravity="center"
                    android:background="@color/colorWhite"
                    android:text="@string/email"
                    android:paddingStart="15dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorEditTextBG"
                    android:layout_below="@+id/ed_password"
                    />

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="55dp"
                    android:inputType="textWebEmailAddress"
                    android:imeOptions="actionNext"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv_email"
                    android:background="@color/colorWhite"
                    android:hint="@string/email_hint"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorEditTextBG"
                    android:paddingStart="15dp" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_below="@+id/tv_email"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:background="@color/colorWhite"
                    android:text="@string/password"
                    android:paddingStart="15dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@+id/ed_email"
                    android:layout_marginTop="1dp"
                    android:textSize="16sp"
                    android:inputType="textWebPassword"
                    android:imeOptions="actionDone"
                    android:textColor="@color/colorBlack"
                    android:layout_toEndOf="@+id/tv_password"
                    android:background="@color/colorWhite"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/colorEditTextBG"
                    android:paddingStart="15dp" />



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/ed_password"
                    android:layout_weight="50">

                    <ProgressBar
                        android:id="@+id/pbar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_centerInParent="true"/>



                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/round_shape_btn_login"
                        android:text="@string/login"
                        android:textColor="@color/colorWhite"
                        android:textStyle="normal"
                        style="?android:attr/borderlessButtonStyle"
                        android:textSize="16sp"/>



                </RelativeLayout>


            </RelativeLayout>

        </ScrollView>

    </LinearLayout>


    </RelativeLayout>

</FrameLayout>